--- a/example/demo/mvc/demo1.html
+++ b/example/demo/mvc/demo1.html
@@ -67,6 +67,11 @@
                 <textarea name="shop.remark">asdfasdf</textarea>
                 <span class="lt">动态绑定:</span>[<span class="bind">{{shop.remark}}</span>]
             </li>
+            <li class=" q-hide">
+                <span class="lt">全局-用户-qq </span>
+                <input name="user.qq" type="text" value="1111"/>
+                <span class="lt">动态绑定:</span>[<span class="bind">${user.qq}</span>]
+            </li>
         </ul>
     </div>
 
