--- a/example/demo/all/demo.html
+++ b/example/demo/all/demo.html
@@ -53,7 +53,7 @@
     <!-- shop操控器 -->
     <div class="box" q-ctrl="shop">
         <p class="ftitle"> 控制器: [shop]购物信息
-            <span class="load bind" style="font-weight:700;">
+            <span class="load bind">
                 倒计时: <g>${time}</g>
                 <span class="loading"></span>
             </span>
