--- a/example/demo/mvc/demo.html
+++ b/example/demo/mvc/demo.html
@@ -15,11 +15,14 @@
         <p class="ftitle"> demo
         </p>
         <ul>
-            <li>
+            <li q-onclick="clickTest2()">
                 <span class="lt">名: </span><input name="shop.shopName" type="text" value="qmik"/>
-                <span class="lt">动态绑定:</span>[
+                <span class="lt" >动态绑定:</span>[
                 <g class="bind">${shop.shopName}</g>
                 ]
+                <button q-onclick="clickTest1">click1</button>
+                <button q-onclick="clickTest1">click2</button>
+                <button q-onclick="clickTest1">click3</button>
             </li>
             <li>
                 <span class="lt">价: </span><input name="price" type="text" value="999"/>
@@ -131,6 +134,16 @@
             shopping: function (scope) {//购物
                 console.log("shopping:", scope);//a
                 //console.log("33");
+                scope.clickTest1 = function(e){
+                    console.log(e.target.innerHTML);
+                };
+                $.delay(function(){
+                    scope.$().append('<button q-onclick="clickTest1">clickxx1</button>');
+                    scope.$().append('<button q-onclick="clickTest1">clickxx2</button>');
+                    scope.$().append('<button q-onclick="clickTest1">clickxx3</button>');
+                    scope.$().append('<button q-onclick="clickTest1">clickxx4</button>');
+                }, 2000);
+                console.log(">>>>>", scope.parent.$());
             },
             level1: function (scope) {
                 console.log('level1:', scope)
