--- a/example/demo/mvc/demo3.html
+++ b/example/demo/mvc/demo3.html
@@ -71,7 +71,7 @@
             $.delay(function () {
                 scope.user.name = "leo111";
                 scope.user.nick = "leo";
-                scope.user.email = "cwq0312@163.om";
+                scope.user.email = "aaa@163.com";
                 scope.user.qq = "555";
 
 
