--- a/example/demo/mvc/mvc.html
+++ b/example/demo/mvc/mvc.html
@@ -31,11 +31,11 @@
     </style>
 </head>
 <body name="${name}" go="${n1}+${name}">
-${name} + ${n1} + {{degree}}
+<g>${name} + ${n1} + {{degree}}</g>
 root name=<input type="text" name="name">
 
 <div q-ctrl="ctrlAbc" style="background:;">
-    addr=[${addr}]<br/>
+    addr=[<g>${addr}</g>]<br/>
     addr=<input name="addr" type="text"/><br/>
     name=<input name="name"/>
 </div>
