--- a/example/demo/mvc/profile/index.html
+++ b/example/demo/mvc/profile/index.html
@@ -307,7 +307,7 @@
                 <div id="J_Qr" class="qr" style="display:none;">
                     <a href="http://www.taobao.com/m?spm=1.6723761.a2147az.1" class="qr-bd"> <span
                             class="h">手机逛宝宝</span> <img
-                            src="http://gtms01.alicdn.com/tps/i1/TB1h3IXGFXXXXXsXFXXDANtWXXX-175-175.png" alt="手机逛宝宝"/>
+                            class="lazy loading" src="http://gtms01.alicdn.com/tps/i1/TB1h3IXGFXXXXXsXFXXDANtWXXX-175-175.png" alt="手机逛宝宝"/>
                     </a>
                     <a href="javascript:;" target="_self" id="J_QrFt" class="qr-ft">
                         <s class="fpicon s-s-close"></s></a>
@@ -340,7 +340,7 @@
                             data-gift-img="http://gtms01.alicdn.com/tps/i1/T12vKuFsFmXXb0fcHr-88-28.gif"
                             data-gift-url="http://new.taobao.com/?ad_id=&amp;am_id=1301066374b3da59cda2&amp;cm_id=&amp;pm_id=">
                             <a href="http://www.taobao.com/market/promo/story/index.php"><img
-                                    src="http://gtms01.alicdn.com/tps/i1/TB1a4N4HXXXXXaQaXXXare4IVXX-80-30.gif"/></a>
+                                    class="lazy loading" src="http://gtms01.alicdn.com/tps/i1/TB1a4N4HXXXXXaQaXXXare4IVXX-80-30.gif"/></a>
                         </li>
                         <li class="nav-ft-text"><a
                                 href="http://www.taobao.com/go/act/315/xb_20100707.php?spm=1.7281509.a214dau.11&amp;&amp;TBG=42685.203542.2&amp;ad_id=&amp;am_id=1300268931aef04f0cdc&amp;cm_id=&amp;pm_id=#rushi">消费者保障</a>
