--- a/example/demo/mvc/demo.html
+++ b/example/demo/mvc/demo.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-    <div class="box border1 bh" q-ctrl="shopping">
+    <div class="box border1 bh" q-ctrl="shopping10005">
         <p class="ftitle"> demo
         </p>
         <ul>
@@ -131,7 +131,7 @@
         //$.app() 编译并生成应用,$.app().ctrl()定义控制器
         console.log("xxxxx");
         $.app().ctrl({
-            shopping: function (scope) {//购物
+            shopping10005: function (scope) {//购物
                 console.log("shopping:", scope);//a
                 //console.log("33");
                 scope.clickTest1 = function(e){
