--- a/example/demo/mvc/demo3.html
+++ b/example/demo/mvc/demo3.html
@@ -7,7 +7,7 @@
     <meta name="-webkit-tap-highlight" content="no"/>
     <meta content="IE=edge,chrome" http-equiv="x-ua-compatible"/>
     <title>mvc例子</title>
-    <script type="text/javascript" src="../../Qmik.all.js"></script>
+    <script type="text/javascript" src="../../Qmik.all.js?9"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
